Added one more warning type to the list of ignored dialyze warnings

--- a/.vim-lsp-settings/settings.json
+++ b/.vim-lsp-settings/settings.json
@@ -6,7 +6,8 @@
                 "dialyzerEnabled": true,
                 "dialyzerWarnOpts": [
                     "no_return",
-                    "no_match"
+                    "no_match",
+                    "no_unused"
                 ]
             }
         }
