Updated default config, added support for loading model and optimizer

--- a/assets/config/default.yml
+++ b/assets/config/default.yml
@@ -1,7 +1,14 @@
+:corpus: null
+:sampler: null
+:evaluator: null
+
 :model:
   :model: :transe
   :hidden_size: 10
   :reverse: true
   :entity_size: 2
+:trainer: null
 :optimizer:
+  :optimizer: :adamw
   :alpha: 0.001
+:checkpoint: null
